--- a/_layouts/index3.html
+++ b/_layouts/index3.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="assets\styles3.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<script src='.\livereload.js'></script>
+	<script src="//cdn.jsdelivr.net/npm/faunadb@latest/dist/faunadb.js"></script>
 </head>
 <body>
 	<div class="main">
