--- a/_layouts/index3.html
+++ b/_layouts/index3.html
@@ -10,10 +10,13 @@
 </head>
 <body>
 	<div class="main">
-		<form class="f">
-			<input class="tin">
+		<form id="form" class="f">
+			<input name="token" class="tin">
+			<button type="submit" class="sb"><span class="material-icons h ">done</span></button>
 		</form>
-		<button class="sb"><span class="material-icons h ">done</span></button>
+		
 	</div>
+	<script type="text/javascript" src="/js/user.js"></script>
 </body>
+
 </html>
