--- a/assets/styles1.css
+++ b/assets/styles1.css
@@ -4,7 +4,7 @@
 .main{
 	text-align: center;
 	margin: auto;
-	width: 70%;
+	width: 80%;
 	overflow: hidden;
 }
 h1{
@@ -27,20 +27,24 @@ h1{
     border-radius: 10px;
 }
 .label{
-	width: 20%;
+	padding: 0px 10px;
+	display: flex;
+	width: 40%;
 	color: white;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
-	margin:0px 10px; 
+	margin:15px 10px; 
 }
 .nname{
-	width: 25%;
+	margin: 0px 10px;
+	width: 100%;
 	border: none;
 	height: 30px;
 }
 .nlink{
+	margin: 0px 10px;
 	height: 30px;
-	width: 40%;
+	width: 100%;
 	border: none;
 	padding:0px 5px;
 }
@@ -54,13 +58,14 @@ h1{
 }
 .addb{
 	margin-left: 15px;
-	width: 50px;
-	height: 50px;
+	width: 40px;
+	height: 40px;
 	padding: 0px;
-	background-color: transparent;
+	background-color: red;
 	margin-right: 10px;
-	border-color: transparent;
+	border:none;
 	border-radius: 3px;
+	font-size: 35px;
 	align-items: center;
 }
 .list{
@@ -90,7 +95,7 @@ list::-webkit-scrollbar {
 .circle{
     width: 20px;
     height: 20px;
-    background: green;
+    background: red;
     border-radius: 50%;
     float: right;
     margin-right: 15px;
@@ -133,15 +138,21 @@ list::-webkit-scrollbar {
 	padding: 0px 3px;
 	margin: 0px 10px;
 }
-.in{
+.inp{
+	text-align: center;
 	height:30px;
 	padding: 0px 5px;
 	margin: 0px ;
+	width: 130px;
+	background: white;
+	line-height: 30px;
+	text-overflow: ellipsis;
 }
 .name{
 	color: white;
 	font-family: 'Open Sans', sans-serif;
-	margin-left: 25px;
+	margin-left: 10px;
+
 }
 
 .in{
@@ -149,6 +160,7 @@ list::-webkit-scrollbar {
 	justify-content: center;
 	align-items: center;
 }
+
 .hr{
 	width: 90%;
 	color: #1E1E2E;
@@ -166,6 +178,7 @@ list::-webkit-scrollbar {
  	letter-spacing: normal;
   	word-wrap: normal;
  	white-space: nowrap;
+ 	font-size: 30px
  	direction: ltr;
  	/* Support for all WebKit browsers. */
  	-webkit-font-smoothing: antialiased;
@@ -188,6 +201,7 @@ list::-webkit-scrollbar {
 	justify-content: center;
 	align-items: center;
 	height: 100%;
+	width: 90%;
 }
 
 @media (max-width:7680px) {
